--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-<link rel="stylesheet" href="css/app.css" />
+<link rel="stylesheet" href="/static/css/app.css" />
 <style>
 .area-score {
   display:none;
@@ -27,7 +27,7 @@
     <div class="container p-3">
       <div class="row text-center">
         <div class="col">
-          <img class="img-fluid" src="img/logo.png" />
+          <img class="img-fluid" src="/static/img/logo.png" />
         </div>
         <div class="w-100"></div>
 
@@ -63,7 +63,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-<script src="js/app.js"></script>
+<script src="/static/js/app.js"></script>
 <script>
 $(function() {
   $('#upload').click(function() {
@@ -95,9 +95,8 @@ function check() {
   if ($("#uploadFile").val()!== '') {
     fd.append("uploadFile", $("#uploadFile").prop("files")[0] );
   }
-  $.ajax(
-    "./check_paripi",
-    {
+  $.ajax({
+      url : "./check_paripi/",
       type : "POST",
       dataType : "json",
       data : fd,
@@ -136,9 +135,8 @@ function destroy() {
   if ($("#uploadFile").val()!== '') {
     fd.append("uploadFile", $("#uploadFile").prop("files")[0] );
   }
-  $.ajax(
-    "./destroy_paripi",
-    {
+  $.ajax({
+      url : "./destroy_paripi/"
       type : "POST",
       dataType : "json",
       data : fd,
