--- a/templates/index.html
+++ b/templates/index.html
@@ -53,8 +53,8 @@
         </div>
         <div class="w-100"></div>
         <div class="col area-score">
+          <label style="color: #8080ff">手にモザイクをかけて</label>
           <button id="destroy" type="button" class="btn btn-sm btn-danger">destroy</button>
-          <label style="color: #8080ff">この処理はやり直しできません</label>
         </div>
       </div>
     </div>
