--- a/templates/index.html
+++ b/templates/index.html
@@ -65,6 +65,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/exif-js/2.3.0/exif.min.js"></script>
 <script src="/static/js/app.js"></script>
 <script>
 
@@ -81,6 +82,15 @@ $(function() {
   $('#uploadFile').on('change', function() {
     $('#upload-image').html('');
     file = $(this).prop('files')[0];
+
+    var orientation = 0;
+    EXIF.getData(file, function(){
+        orientation = file.exifdata.Orientation;
+        if(orientation === undefined){
+            orientation = 1;
+        }
+    });
+
 
     // 選択されたファイルが画像かどうか判定
     if (file.type != 'image/jpeg' && file.type != 'image/png') {
