--- a/templates/index.html
+++ b/templates/index.html
@@ -89,75 +89,78 @@ $(function() {
         if(orientation === undefined){
             orientation = 1;
         }
+
+        // 選択されたファイルが画像かどうか判定
+        if (file.type != 'image/jpeg' && file.type != 'image/png') {
+          // 画像でない場合は終了
+          file = null;
+          blob = null;
+          return;
+        }
+
+        // 画像をリサイズする
+        var image = new Image();
+        var reader = new FileReader();
+        reader.onload = function(e) {
+          image.onload = function() {
+            var width, height;
+            if(image.width > image.height){
+              // 横長の画像は横のサイズを指定値にあわせる
+              var ratio = image.height/image.width;
+              width = THUMBNAIL_WIDTH;
+              height = THUMBNAIL_WIDTH * ratio;
+            } else {
+              // 縦長の画像は縦のサイズを指定値にあわせる
+              var ratio = image.width/image.height;
+              width = THUMBNAIL_HEIGHT * ratio;
+              height = THUMBNAIL_HEIGHT;
+            }
+            // サムネ描画用canvasのサイズを上で算出した値に変更
+            var canvas = $('#canvas')
+                         .attr('width', width)
+                         .attr('height', height);
+            var ctx = canvas[0].getContext('2d');
+            // canvasに既に描画されている画像をクリア
+            ctx.clearRect(0,0,width,height);
+            // canvasにサムネイルを描画
+            ctx.drawImage(image,0,0,image.width,image.height,0,0,width,height);
+
+            // canvasからbase64画像データを取得
+            var base64 = canvas.get(0).toDataURL('image/jpeg');
+            // base64からBlobデータを作成
+            var barr, bin, i, len;
+            bin = atob(base64.split('base64,')[1]);
+            len = bin.length;
+            barr = new Uint8Array(len);
+            i = 0;
+            while (i < len) {
+              barr[i] = bin.charCodeAt(i);
+              i++;
+            }
+            blob = new Blob([barr], {type: 'image/jpeg'});
+            //console.log(blob);
+
+            var img = $('<img>');
+            img.attr('src', base64);
+            img.addClass('img-fluid');
+            $('#upload-image').append(img);
+
+            check();
+          }
+          image.src = e.target.result;
+        }
+        console.log(file.type);
+        reader.readAsDataURL(file);
+
+        });
+        $("#destroy").click(function() {
+        destroy();
+        });
     });
 
 
-    // 選択されたファイルが画像かどうか判定
-    if (file.type != 'image/jpeg' && file.type != 'image/png') {
-      // 画像でない場合は終了
-      file = null;
-      blob = null;
-      return;
-    }
 
 
-    // 画像をリサイズする
-    var image = new Image();
-    var reader = new FileReader();
-    reader.onload = function(e) {
-      image.onload = function() {
-        var width, height;
-        if(image.width > image.height){
-          // 横長の画像は横のサイズを指定値にあわせる
-          var ratio = image.height/image.width;
-          width = THUMBNAIL_WIDTH;
-          height = THUMBNAIL_WIDTH * ratio;
-        } else {
-          // 縦長の画像は縦のサイズを指定値にあわせる
-          var ratio = image.width/image.height;
-          width = THUMBNAIL_HEIGHT * ratio;
-          height = THUMBNAIL_HEIGHT;
-        }
-        // サムネ描画用canvasのサイズを上で算出した値に変更
-        var canvas = $('#canvas')
-                     .attr('width', width)
-                     .attr('height', height);
-        var ctx = canvas[0].getContext('2d');
-        // canvasに既に描画されている画像をクリア
-        ctx.clearRect(0,0,width,height);
-        // canvasにサムネイルを描画
-        ctx.drawImage(image,0,0,image.width,image.height,0,0,width,height);
-
-        // canvasからbase64画像データを取得
-        var base64 = canvas.get(0).toDataURL('image/jpeg');
-        // base64からBlobデータを作成
-        var barr, bin, i, len;
-        bin = atob(base64.split('base64,')[1]);
-        len = bin.length;
-        barr = new Uint8Array(len);
-        i = 0;
-        while (i < len) {
-          barr[i] = bin.charCodeAt(i);
-          i++;
-        }
-        blob = new Blob([barr], {type: 'image/jpeg'});
-        //console.log(blob);
-
-        var img = $('<img>');
-        img.attr('src', base64);
-        img.addClass('img-fluid');
-        $('#upload-image').append(img);
-
-        check();
-      }
-      image.src = e.target.result;
-    }
-    reader.readAsDataURL(file);
-
-  });
-  $("#destroy").click(function() {
-    destroy();
-  });
 });
 function check() {
 
