--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@ $(function() {
         orientation = file.exifdata.Orientation;
 
           alert(orientation);
-          
+
         if(orientation === undefined){
             orientation = 1;
         }
@@ -128,6 +128,72 @@ $(function() {
             ctx.clearRect(0,0,width,height);
             // canvasにサムネイルを描画
             ctx.drawImage(image,0,0,image.width,image.height,0,0,width,height);
+
+
+
+            //描画サイズを指定
+            draw_width = width;
+            draw_height = height;
+
+
+            switch(orientation){
+
+				    	case 2:
+				    		ctx.transform(-1, 0, 0, 1, canvas_width, 0);
+				    	break;
+
+				    	case 3:
+				    		ctx.transform(-1, 0, 0, -1, canvas_width, canvas_height);
+				    	break;
+
+				    	case 4:
+				    		ctx.transform(1, 0, 0, -1, 0, canvas_height);
+				    	break;
+
+				    	case 5:
+				    		ctx.transform(-1, 0, 0, 1, 0, 0);
+				    		ctx.rotate((90 * Math.PI) / 180);
+				    		draw_width = canvas_height;
+				    		draw_height = canvas_width;
+				    	break;
+
+				    	case 6:
+				    		ctx.transform(1, 0, 0, 1, canvas_width, 0);
+				    		ctx.rotate((90 * Math.PI) / 180);
+				    		draw_width = canvas_height;
+				    		draw_height = canvas_width;
+				    	break;
+
+				    	case 7:
+				    		ctx.transform(-1, 0, 0, 1, canvas_width, canvas_height);
+				    		ctx.rotate((-90 * Math.PI) / 180);
+				    		draw_width = canvas_height;
+				    		draw_height = canvas_width;
+				    	break;
+
+				    	case 8:
+				    		ctx.transform(1, 0, 0, 1, 0, canvas_height);
+				    		ctx.rotate((-90 * Math.PI) / 180);
+				    		draw_width = canvas_height;
+				    		draw_height = canvas_width;
+				    	break;
+
+				    	default:
+				    	break;
+
+				    }
+
+            ctx.drawImage(image, 0, 0, draw_width, draw_height);
+
+
+
+
+
+
+
+
+
+
 
             // canvasからbase64画像データを取得
             var base64 = canvas.get(0).toDataURL('image/jpeg');
