--- a/templates/index.html
+++ b/templates/index.html
@@ -132,6 +132,9 @@ $(function() {
 
 
             //描画サイズを指定
+            canvas_width = width;
+			    	canvas_height = height;
+
             draw_width = width;
             draw_height = height;
 
