--- a/templates/index.html
+++ b/templates/index.html
@@ -127,7 +127,7 @@ $(function() {
             // canvasに既に描画されている画像をクリア
             ctx.clearRect(0,0,width,height);
             // canvasにサムネイルを描画
-            ctx.drawImage(image,0,0,image.width,image.height,0,0,width,height);
+            //ctx.drawImage(image,0,0,image.width,image.height,0,0,width,height);
 
 
 
