--- a/templates/index.html
+++ b/templates/index.html
@@ -186,6 +186,8 @@ $(function() {
 
 				    }
 
+            $('#canvas').width(draw_width);
+					  $('#canvas').height(draw_height);
             ctx.drawImage(image, 0, 0, draw_width, draw_height);
 
 
