--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
         <div class="w-100"></div>
 
         <div class="col pt-5">
-          <button id="upload" type="button" class="btn btn-lg btn-danger">まずはパリピ度をチェック</button>
+          <button id="upload" type="button" class="btn btn-lg btn-danger">画像からパリピ率を判定</button>
           <br />
           <input id="uploadFile" type="file" accept="image/jpeg"></input>
         </div>
@@ -47,7 +47,7 @@
         </div>
         <div class="col-md-6">
           <div class="area-score">
-            <label>パリピ度</label>
+            <label>パリピ率</label>
             <svg class="radial-progress" data-percentage="33" viewBox="0 0 80 80">
                 <circle class="incomplete" cx="40" cy="40" r="35"></circle>
                 <circle class="complete" cx="40" cy="40" r="35" style="stroke-dashoffset: 39.58406743523136;"></circle>
@@ -60,6 +60,7 @@
 
 
           <button id="destroy" type="button" class="btn btn-sm btn-danger">destroy</button>
+          <span>手を認識してモザイクをかける</span>
         </div>
       </div>
     </div>
